# SSK

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
bmp280/: Cargo.toml
bmp280/src/: lib.rs
info/: MQTT_Sparkplug.pptx  SSK-muutokset.docx
ssk/: Cargo.toml
ssk/src/: main.rs
