[package]
name = "ssk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bmp280 = { path = "../bmp280" }

cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.2", optional = true }

rp2040-boot2 = { version = "0.2.1", optional = true }
rp2040-hal = "0.7.0"
rp-pico = "0.6.0"
fugit = "0.3.5"
futures = { version = "0.3", default-features = false, optional = true }
panic-halt = "0.2.0"
embedded-hal = "0.2.6"
defmt = "0.3"

i2c-pio = "0.4.0"
arrform = "0.1.1"

panic-abort = { version = "0.3.2", optional = true }
asm-delay = "0.9.0"
# cortex-m = { version = "0.7.4", optional = true }
# cortex-m-rt = { version = "0.7.1", optional = true }
nb = { version = "1.0.0", optional = true }
mpu9250 = { version = "0.24.0", optional = true }
# mpu9250 = {path = "../mpu9250", optional = true}
dcmimu = { version = "0.2.2", optional = true }
ryu = { version = "1.0.10", optional = true }
lsm303c = { version = "0.2.0", optional = true }
# lsm303c = {path = "../lsm303c", optional = true}
# bmp280 = { version = "0.0.5", optional = true, package = "bmp280-ehal" }
shared-bus = { version = "0.2.3", optional = true }
vl53l0x = { version = "0.3.1", optional = true }
# vl53l0x = {path = "../vl53l0x", optional = true}
nalgebra = { version = "0.32.1", optional = true, default-features = false }
libm = { version = "0.2.2", optional = true }
rand = { version = "0.8.5", optional = true, default-features = false }
cortex-m-semihosting = { version = "0.5.0", optional = true }
heapless = { version = "0.7.13", optional = true }


[dev-dependencies]
panic-halt = "0.2.0"
embedded-hal = "0.2.5"
cortex-m-rtic = "1.1.2"
nb = "1.0"
heapless = "0.7.9"
smart-leds = "0.3.0"
ws2812-pio = "0.5.0"
embedded-graphics = "0.7.1"

[features]
default = ["boot2", "rt"]
boot2 = ["rp2040-boot2"]
rt = ["cortex-m-rt", "rp2040-hal/rt"]
